<?xml version="1.0" encoding="utf-8"?>
<!--
  ~
  ~ Project: total-gp-world
  ~ File: drivers_item_list.xml
  ~
  ~ Created by fattazzo
  ~ Copyright © 2018 Gianluca Fattarsi. All rights reserved.
  ~
  ~ MIT License
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  ~
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="4dp">

    <ImageView
        android:id="@+id/driver_item_flag"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_centerInParent="true"
        android:layout_marginEnd="4dp"
        android:scaleType="fitXY"
        app:srcCompat="@color/background_color"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/driver_item_number"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/driver_item_info_layout"
        android:layout_centerInParent="true"
        android:layout_marginEnd="4dp"
        android:layout_toEndOf="@+id/driver_item_flag"
        android:gravity="fill_vertical|center_horizontal"
        android:textAppearance="@style/TextAppearance.Large"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/driver_color"
        android:layout_width="10dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:layout_toEndOf="@+id/driver_item_number"
        android:layout_alignParentTop="true"
        android:layout_alignBottom="@id/driver_item_info_layout"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:id="@+id/driver_item_info_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/driver_color"
        android:orientation="vertical">

        <TextView
            android:id="@+id/driver_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.Medium" />

        <TextView
            android:id="@+id/driver_item_dateOfBirth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.Medium" />
    </LinearLayout>
</RelativeLayout>